--- a/angular.json
+++ b/angular.json
@@ -148,7 +148,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "30fb6d68-6508-4353-b355-75721cd295c4"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
